--- a/views/congregations/verification.ejs
+++ b/views/congregations/verification.ejs
@@ -2,9 +2,8 @@
     <div class="row justify-content-center">
         <div class="col-lg-6 col-md-12" id="form">
             <div id="form1">
-                <div>
-                    <h1 class="text-center" class="appTitle"><i class="fas fa-map-marked-alt fa-3x"></i> <br> Territory Manager</h1>
-                    <h4 class="text-center" class="appDescription">I zarządzanie terenami staje się o wiele prostsze</h4>
+                <div class="text-center">
+                    <img src="/logo_tm_website.png" alt="logo">
                 </div>
                 <h1 class="login">Zweryfikuj konto w Territory Manager</h1>
                 <% if(error.length > 0){ %>
