--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
                     <img src="/logo_tm_website.png" alt="logo">
                 </div>
                 
-                <h1 class="login">Zaloguj się do panelu</h1>
+                <h1 class="login">Zaloguj się do panelu: <%= ipInfo.clientIp %></h1>
                 <% if(error.length > 0){ %>
                     <div class="alert alert-danger" role="alert">
                         <%= error %>
