--- a/views/territories/edit.ejs
+++ b/views/territories/edit.ejs
@@ -147,7 +147,7 @@
                           
                             <div class="form-floating mb-3">
                        
-                                <textarea name="territory[description]" id="description" placeholder="Opis terenu" class="form-control"><%= territory.description %> </textarea>
+                                <textarea name="territory[description]" id="description" placeholder="Opis terenu" class="form-control"><%= territory.description.trim() %></textarea>
                                 <label for="description" class="username">
                                     Edytuj opis terenu
                                     
