--- a/public/style.css
+++ b/public/style.css
@@ -128,9 +128,6 @@ thead,
     display: flex;
     margin-top: 20px;
 }
-.ministryGroup {
-    
-}
 
 .ministryGroup__item {
     text-align: center;
@@ -248,6 +245,11 @@ input[type=search]::placeholder {
     margin-bottom: 0;
 }
 
+.chart__container {
+    position: relative;  
+    width: 100%;
+}
+
 .preacher__info {
     display: flex;
     background: #fff;
@@ -312,6 +314,10 @@ input[type=search]::placeholder {
 
     .preachers-buttons {
         margin-top: 15px;
+    }
+
+    .chart__container {
+        width: 900px;
     }
 
     .info {
