--- a/views/ministryGroups/generate-pdf.ejs
+++ b/views/ministryGroups/generate-pdf.ejs
@@ -23,8 +23,12 @@
             border-left: 1px solid white;
             margin-bottom: 0;
             font-family: 'Poppins', sans-serif;
+            
         }
-
+        
+        tr:nth-of-type(2n) {
+            background: rgba(0, 0, 0, 0.05);
+        }
     </style>
 </head>
 
@@ -49,7 +53,7 @@
                                 <tr class="text-center">
                                    <% ministryGroups.forEach((group, j) => { %>
                                         <% if(ministryGroups[j]?.preachers[i]?.name === group.overseer.name){ %>
-                                            <td style="background-color: #ece9e9;"><strong><%= ministryGroups[j]?.preachers[i]?.name %></strong></td>
+                                            <td style="background-color: rgb(202, 236, 202);"><strong><%= ministryGroups[j]?.preachers[i]?.name %></strong></td>
                                         <% } else { %>
                                             <td><%= ministryGroups[j]?.preachers[i]?.name %></td>
                                         <% } %>
