--- a/views/congregations/verification.ejs
+++ b/views/congregations/verification.ejs
@@ -16,8 +16,8 @@
                         <%= success %>
                     </div>
                 <% } %>
-                <% if(typeof user !== 'undefined'){ %>
-                    <form action="/congregations/<%= user._id %>/verification" method="post" id="form4">
+                <% if(typeof congregation !== 'undefined'){ %>
+                    <form action="/congregations/<%= congregation._id %>/verification" method="post" id="form4">
                         <div class="form-floating mb-3">
                             <input type="text" class="form-control" name="code" id="code" placeholder="123523" aria-label="Kod weryfikacyjny" aria-describedby="basic-addon1" required>
                             <label for="code" class="username">
@@ -28,11 +28,11 @@
                         </div>  
                         <input type="submit" value="Zweryfikuj konto" class="btn button btn-green" id="send">
                     </form>
-                    <form action="/congregations/<%= user._id %>/resend/verification" method="post">
+                    <form action="/congregations/<%= congregation._id %>/resend/verification" method="post">
                         <input type="submit" value="Wyślij kod ponownie" class="btn button btn-golden">
                     </form>
                 <% } else { %>
-                    <form action="/congregations/<%= user_id %>/resend/verification" method="post">
+                    <form action="/congregations/<%= congregation_id %>/resend/verification" method="post">
                         <input type="submit" value="Wyślij kod ponownie" class="btn button btn-golden">
                     </form>
                 <% } %>
